解耦rank_generator生成的格式化代码

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +56,20 @@
     "    '''\n",
     "    result = []\n",
     "    \n",
-    "    for item in text.split():\n",
-    "        rank = re.findall('([\\d\\w]+):', item)[0]\n",
-    "        keyword = re.findall('sm\\d+', item)[0]\n",
+    "    li = keywords.split()\n",
+    "    \n",
+    "    for (idx, item) in enumerate(li):\n",
+    "        rank = re.findall('([\\d\\w]+):', item)\n",
+    "        keyword = re.findall('sm\\d+', item)\n",
+    "        \n",
+    "        if rank:\n",
+    "            rank = rank[0]\n",
+    "        else:\n",
+    "            rank = len(li) - idx\n",
     "\n",
+    "        if keyword:\n",
+    "            keyword = keyword[0]\n",
+    "            \n",
     "        result.append((rank, keyword))\n",
     "    \n",
     "    def _sort(item):\n",
@@ -70,69 +80,208 @@
     "            \n",
     "    result.sort(key=_sort, reverse=True)\n",
     "    \n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "\n",
+    "def generate_rank(text: str, show_not_found: bool = True):\n",
+    "    items = parse_keywords(text)\n",
+    "    \n",
+    "    for item in items:\n",
+    "         rank, keyword = item\n",
+    "    \n",
+    "         if keyword:\n",
+    "            search_results = search_one(keyword)\n",
+    "            if not search_results and show_not_found:\n",
+    "                print(rank, keyword, '未找到')\n",
+    "\n",
+    "            for result in search_results:\n",
+    "                print(rank, keyword, 'av' + str(result['aid']), result['title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 sm38705701 av332899703 想回到材料屋的NYN姐贵\n",
-      "19 sm38731531 未找到\n",
-      "18 sm38761381 av545659719 チンポコにファンタジー\n",
-      "17 sm38742438 未找到\n",
-      "16 sm38741042 av333091944 とっとこハム太RU\n",
-      "15 sm38791123 未找到\n",
-      "14 sm38669385 av672859951 银河战士☆\n",
-      "13 sm38683779 av672949367 想去月球的NYN姐贵\n",
-      "12 sm38735267 av760510209 お菓子の材料屋さん開店記念日☆\n",
-      "11 sm38742951 av715563833 心配性☆\n",
-      "10 sm38685096 av375375144 NYN姉貴先輩BB\n",
-      "9 sm38703488 未找到\n",
-      "8 sm38719517 未找到\n",
-      "7 sm38691633 未找到\n",
-      "6 sm38730842 av888019923 工作中喝酒的NYN姐贵\n",
-      "5 sm38766005 av760702603 二军Kenshi 第一回「欢迎回家」\n",
-      "4 sm38729600 未找到\n",
-      "3 sm38645251 av715350921 無音城☆\n",
-      "2 sm38670211 av587866476 初次搭飞机的NYN姐贵\n",
-      "1 sm38760233 av205671683 被NYN姐贵打疫苗的勇作\n",
-      "P1 sm38798709 av418342766 魔方化姐贵\n",
-      "P2 sm38725490 未找到\n",
-      "P3 sm38713956 av375598097 潜伏在NYN姐贵身上的字母BB\n",
-      "P4 sm38732032 av460591871 踊るICGカービィ☆\n",
-      "P5 sm38670889 未找到\n",
-      "OP sm38809832 av673372393 粪地之色乃茶色☆\n"
+      "43 sm38909010 未找到\n",
+      "42 sm38831771 未找到\n",
+      "40 sm38849607 未找到\n",
+      "39 sm38863968 未找到\n",
+      "38 sm38849048 av715888001 ノリノリNYN姉貴BB＋使用例.igarashiyuriko\n",
+      "37 sm38890395 av716185868 【BB曲奇剧场】如果有神秘开关时该怎么做呢\n",
+      "37 sm38890395 av206138995 スイッチがあったらどうしようNYN姉貴\n",
+      "36 sm38868364 av846049933 短编集⭐\n",
+      "35 sm38855122 av673829170 【BB曲奇剧场】某家族的一日\n",
+      "34 sm38831830 av545957502 ３Dと化したRRMのQVC☆\n",
+      "33 sm38957943 未找到\n",
+      "32 sm38910424 av631152251 独自一人被赶到外面的UDK\n",
+      "31 sm38955214 av846394160 s.z.\n",
+      "31 sm38955214 av376411798 s.z.\n",
+      "29 sm38873715 未找到\n",
+      "28 sm38932392 未找到\n",
+      "27 sm38910444 av673733388 【BB曲奇剧场】想堆雪人的NYN姐贵\n",
+      "26 sm38787871 未找到\n",
+      "25 sm38823534 av758414474 银乱系ならるりまでオナろう\n",
+      "24 sm38863151 av206109120 天箭桥神社 BW\n",
+      "23 sm38920471 av248771182 想钓到大家伙的ICG姐贵\n",
+      "22 sm38877734 av761068629 VANILLA神社\n",
+      "21 sm38949638 未找到\n",
+      "20 sm38846267 未找到\n",
+      "18 sm38891747 av248727824 【合作】投稿者 × 絵师 合作☆\n",
+      "17 sm38883304 未找到\n",
+      "16 sm38894630 av673732146 并没有向夜晚奔去\n",
+      "15 sm38853033 av588421557 Kung-fu Fantasia☆\n",
+      "15 sm38853033 av930920090 Kung-fu Fantasia☆\n",
+      "14 sm38870721 av248626393 大改造☆劇的ビフォーアフター神社.theme【弹幕附】\n",
+      "14 sm38870721 av888577659 全能住宅改造王神社.theme\n",
+      "13 sm38828514 av630888096 TNOK自動車教習所に行くNYN姉貴\n",
+      "13 sm38828514 av715896098 【BB曲奇剧场】去TNOK驾校的NYN姐贵\n",
+      "12 sm38859852 av418554666 总是忘记对方点什么的NYN姐贵\n",
+      "12 sm38859852 av546012321 记不清顺序的NYN姐贵\n",
+      "11 sm38896328 av931167538 【合作】淫ク☆コンピレーション2021【オールスター】\n",
+      "10 sm38936798 av546327223 跳着不知道没舞的夜晚的NYN姐贵.oddloop\n",
+      "9 sm38826001 av376061323 たねうまぴょい伝説☆\n",
+      "9 sm38826001 av631028696 （弹幕付）たねうまぴょい伝説☆\n",
+      "9 sm38826001 av973465237 【赛马娘】たねうまぴょい伝説☆\n",
+      "9 sm38826001 av545889021 たねうまぴょい伝説☆【赛马娘×COOKIE☆】\n",
+      "9 sm38826001 av503413775 たねうまぴょい伝説☆\n",
+      "7 sm38833974 未找到\n",
+      "6 sm38857047 av418596854 故乡.MOTRoid\n",
+      "5 sm38857880 av333615039 被敲门的UDK姐贵\n",
+      "4 sm38879653 av291087226 U又☆\n",
+      "4 sm38879653 av546111635 U又☆\n",
+      "3 sm38954836 av291432989 会动的酒饮SNNNCB\n",
+      "1 sm38881187 未找到\n"
      ]
     }
    ],
    "source": [
-    "text = '''1:sm38760233　11:sm38742951　OP:sm38809832(タグ無し)\n",
-    "2:sm38670211　12:sm38735267　P1:sm38798709(48位)\n",
-    "3:sm38645251　13:sm38683779　P2:sm38725490(125位)\n",
-    "4:sm38729600　14:sm38669385　P3:sm38713956(47位)\n",
-    "5:sm38766005　15:sm38791123　P4:sm38732032(88位)\n",
-    "6:sm38730842　16:sm38741042　P5:sm38670889(129位)\n",
-    "7:sm38691633　17:sm38742438\n",
-    "8:sm38719517　18:sm38761381\n",
-    "9:sm38703488　19:sm38731531\n",
-    "10:sm38685096　20:sm38705701\n",
+    "text = '''sm38909010 sm38831771\n",
+    "\n",
+    "30th-21st\n",
+    "sm38849607 sm38863968 sm38849048 sm38890395 sm38868364\n",
+    "sm38855122 sm38831830 sm38957943 sm38910424 sm38955214\n",
+    "\n",
+    "20th-11th\n",
+    "sm38873715 sm38932392 sm38910444 sm38787871 sm38823534\n",
+    "sm38863151 sm38920471 sm38877734 sm38949638 sm38846267\n",
+    "\n",
+    "10th-1st\n",
+    "sm38891747 sm38883304 sm38894630 sm38853033 sm38870721\n",
+    "sm38828514 sm38859852 sm38896328 sm38936798 sm38826001\n",
+    "\n",
+    "P1-P5\n",
+    "sm38833974 sm38857047\n",
+    "sm38857880 sm38879653 sm38954836\n",
+    "\n",
+    "OP\n",
+    "sm38881187\n",
     "''' # 2021-5 月的月刊文本\n",
     "\n",
-    "for item in parse_keywords(text):\n",
-    "    rank, keyword = item\n",
-    "    search_results = search_one(keyword)\n",
-    "    if not search_results:\n",
-    "        print(rank, keyword, '未找到')\n",
-    "        \n",
-    "    for result in search_results:\n",
-    "        print(rank, keyword, 'av' + str(result['aid']), result['title'])"
+    "generate_rank(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 sm38643926 未找到\n",
+      "-1 sm38576402 av972614594 Searching for the Cocoa Treasure ☆\n",
+      "-1 sm38531519 未找到\n",
+      "-1 sm38585060 未找到\n",
+      "-1 sm38562800 av375033715 RIM一家の人気投票\n",
+      "-1 sm38560665 av845098977 尚未看过巨人最新话的NYN姐贵.序\n",
+      "-1 sm38564265 未找到\n",
+      "-1 sm38573010 av757560868 节食的DIYUSI\n",
+      "-1 sm38533247 av587917942 猫月\n",
+      "-1 sm38533247 av247443926 ク砕月☆\n",
+      "-1 sm38595346 未找到\n",
+      "-1 sm38598362 av760161716 一脸嫌弃地给你看的BNKRG姐贵\n",
+      "-1 sm38616150 av332803338 Critical Crystal☆.mp4\n",
+      "-1 sm38616150 av375153400 Critical Crystal☆.mp4\n",
+      "-1 sm38518145 av459997897 白虎野の娘☆☆☆☆☆\n",
+      "-1 sm38540022 av629876130 Goodbye宣言☆\n",
+      "-1 sm38580217 av290025006 这些家伙总是看起来这么欢乐啊Unwelcome School☆\n",
+      "-1 sm38598744 av845209498 Komugi Rave\n",
+      "-1 sm38588518 av630123908 乡村小路☆　feat.MGRoid\n",
+      "-1 sm38636838 av247777250 变成驴的NYN姐贵\n",
+      "-1 sm38565773 av205073992 ルリマ / いんらんベア\n",
+      "-1 sm38565773 av845028780 Rurima / いんらんベア\n",
+      "-1 sm38517133 av502899359 想让UDK生草的先辈\n",
+      "-1 sm38538787 av629921300 唱Dragostea Din Tei的ICG姐贵GB\n",
+      "-1 sm38533566 av587439890 めぐ列车 / MGRoid\n",
+      "-1 sm38613713 av247650480 まけるマンのうた\n",
+      "-1 sm38648193 av972849506 Big brother☆☆☆\n",
+      "-1 sm38606872 av845128387 迫真キャラクリ部トーナメントの裏技.mp2\n",
+      "-1 sm38525895 av545857427 逛庙会☆NYNICG\n",
+      "-1 sm38525895 av887926289 去庙会的ICG和NYN\n",
+      "-1 sm38525895 av629938784 一起去逛庙会的NYN和ICG\n",
+      "-1 sm38520329 未找到\n",
+      "-1 sm38574191 未找到\n",
+      "-1 sm38631283 未找到\n",
+      "-1 sm38525718 av972851199 【熟肉】演技力に欠ける\n",
+      "-1 sm38525718 av757476836 演技力に欠ける\n",
+      "-1 sm38536281 av544985633 想钓鱼的NYN姉貴\n",
+      "-1 sm38557421 未找到\n",
+      "-1 sm38567011 av760102683 舵をとれ-MGRoidカバー-\n",
+      "-1 sm38567213 未找到\n",
+      "-1 sm38573448 av290004997 嗯！　嗯！　嗯！\n",
+      "-1 sm38622178 av930235728 アクトナイツ☆\n",
+      "-1 sm38646568 av290318907 学习生活的NYN姐贵\n",
+      "-1 sm38586567 av715030310 ガンバスター神社☆.diebuster\n",
+      "-1 sm38518838 av715089054 【月排行】2021年3月Cookie☆排行\n",
+      "-1 sm38823506 未找到\n",
+      "-1 sm36774907 未找到\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://www.nicovideo.jp/series/197048 饼月刊\n",
+    "\n",
+    "text2 = '''\n",
+    "30th-21st\n",
+    "sm38643926 sm38576402 sm38531519 sm38585060 sm38562800\n",
+    "sm38560665 sm38564265 sm38573010 sm38533247 sm38595346\n",
+    "\n",
+    "20th-11th\n",
+    "sm38598362 sm38616150 sm38518145 sm38540022 sm38580217\n",
+    "sm38598744 sm38588518 sm38636838 sm38565773 sm38517133\n",
+    "\n",
+    "10th-1st\n",
+    "sm38538787 sm38533566 sm38613713 sm38648193 sm38606872\n",
+    "sm38525895 sm38520329 sm38574191 sm38631283 sm38525718\n",
+    "\n",
+    "P1-P7\n",
+    "sm38536281 sm38557421 sm38567011 sm38567213\n",
+    "sm38573448 sm38622178 sm38646568\n",
+    "\n",
+    "OP\n",
+    "sm38586567\n",
+    "\n",
+    "2021年3月号: sm38518838\n",
+    "2021年5月号: sm38823506\n",
+    "\n",
+    "2020年4月号: sm36774907\n",
+    "'''\n",
+    "\n",
+    "generate_rank(text2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
